# streamlit-autocomplete

./: .eslintrc.js  .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  CODEOWNERS  MANIFEST.in  README.md  README_STREAMING.md  build.sh  pyproject.toml  release.config.js  update_version.py
.github/workflows/: codeql-analysis.yml  cypress.yml  pr-build.yml  pr-create-release.yml  pr-cypress.yml  pr-pre-commit.yml  pr-test.yml
examples/: ai_service.py  chat_example.py  test_autocomplete.py
st_autocomplete/: __init__.py  autocomplete.py  callbacks.py  component.py  state.py  types.py
st_autocomplete/frontend/: cypress.config.ts  package-lock.json  package.json
st_autocomplete/frontend/cypress/: tsconfig.json
st_autocomplete/frontend/cypress/e2e/: autocomplete.cy.ts
st_autocomplete/frontend/cypress/support/: commands.ts  e2e.ts
st_autocomplete/frontend/public/: dev.html  index.html
st_autocomplete/frontend/src/: index.tsx
st_autocomplete/frontend/src/components/: Autocomplete.tsx  DropdownPortal.tsx  StyledInput.tsx  SuggestionItem.tsx  SuggestionsList.tsx
st_autocomplete/frontend/src/dev/: index.tsx  mockStreamlit.ts
st_autocomplete/frontend/src/hooks/: useComponentHeight.ts  useDropdownPosition.ts  useInputValue.ts  useResizeObserver.ts  useSimplifiedDropdownPosition.ts  useSuggestionScroll.ts  useSuggestionStateChange.ts  useSuggestions.ts  useSuggestionsChangeDetector.ts
st_autocomplete/frontend/src/styles/: SuggestionItem.css  autocompleteStyles.ts
st_autocomplete/frontend/src/types/: index.ts
(+7 files in other folders)
